# chainer

chainerx_cc/chainerx/: CMakeLists.txt
chainerx_cc/chainerx/python/: CMakeLists.txt  routines.cc
